--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <span class="box-words-wrapper">
                         <b class="is-visible">nyu.</b>
                         <b>&nbsp;devops.</b>
-                        <b>aws.</b>
+                        <b>aws_testing.</b>
                     </span>
 		        </h1>
                 <h5>everything you need to build your personal portfolio</h5>
