--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
 
+    <script type="text/javascript" src="https://l2.io/ip.js?var=myip"></script>
+    <script type="text/javascript" src="https://www.l2.io/ip.js?var=myip"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -89,6 +91,11 @@
                     </span>
 		        </h1>
                 <h5>everything you need to build your personal portfolio</h5>
+                <br>
+                <h4><script type="text/javascript">document.write("Your IP is :", userip);</script></h4>
+                <br>
+                <h4></h4>
+                <br>
             </div>
 
             <div class="mouse">
