--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
     <!-- modernizr -->
     <script src="js/modernizr.js"></script>
 
-    <script type="text/javascript" src="https://l2.io/ip.js?var=myip"></script>
-    <script type="text/javascript" src="https://www.l2.io/ip.js?var=myip"></script>
+    <script type="text/javascript">
+        window.onload = function () {
+            var script = document.createElement("script");
+            script.type = "text/javascript";
+            script.src = "https://api.ipify.org?format=jsonp&callback=DisplayIP";
+            document.getElementsByTagName("head")[0].appendChild(script);
+        };
+        function DisplayIP(response) {
+            document.getElementById("ipaddress").innerHTML = "Your IP Address is " + response.ip;
+        }
+    </script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -90,12 +99,9 @@
                         <b>aws_testing.</b>
                     </span>
 		        </h1>
+                <h1><span id = "ipaddress"></span></h1><br>
                 <h5>everything you need to build your personal portfolio</h5>
-                <br>
-                <h4><script type="text/javascript">document.write("Your IP is :", userip);</script></h4>
-                <br>
-                <h4></h4>
-                <br>
+                
             </div>
 
             <div class="mouse">
