--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
                     </span>
 		        </h1>
                 <h1><span id = "ipaddress"></span></h1><br>
-                <h5>everything you need to build your personal portfolio</h5>
-                
+                <h5>everything you need to build your personal portfolio</h5><br>
+		    <h1><?php echo $_SERVER['SERVER_ADDR']; ?></h1>
             </div>
 
             <div class="mouse">
