--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		        </h1>
                 <h1><span id = "ipaddress"></span></h1><br>
                 <h5>everything you need to build your personal portfolio</h5><br>
-		    <h1>Hello, today is <?php echo date('l, F jS, Y'); ?>.</h1>
+		    <h1>Hello, today is <?php phpinfo(); ?>.</h1>
             </div>
 
             <div class="mouse">
