--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </span>
 		        </h1>
                 <h1><span id = "ipaddress"></span></h1><br>
-                <h5>everything you need to build your personal portfolio</h5><br>
+                <h5>everything you need to build your personal portfolio<?php echo 'is php working?'; ?></h5><br>
 		    <h1>Hello, today is <?php phpinfo(); ?>.</h1>
             </div>
 
